# Butterfly-Diffusion-Generation

./: .gitignore  CONTRIBUTING.md  README.md  environment.yaml  launch_streamlit.bat  launch_streamlit.sh  pyproject.toml  requirements.txt  setup.py
.streamlit/: config.toml
app/: streamlit_app.py
notebooks/: butterfly_diffusion.ipynb  butterfly_diffusion_academic.ipynb  butterfly_diffusion_kaggle.ipynb
reports/: KAGGLE_INSTRUCTIONS.md  execution_summary.md  kaggle_runtime_report.md  kernel-metadata.json  production_report.md  root_cause_report.md
src/: __init__.py  config.py  data.py  diffusion.py  ema.py  inference.py  sampler.py  scheduler.py  train.py
src/model/: __init__.py  blocks.py  embeddings.py  unet.py
src/utils/: __init__.py  checkpoint.py  fetch_checkpoint.py  gpu_monitor.py  seed.py  visualize.py
