[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "butterfly-diffusion"
version = "1.0.0"
description = "Research-grade DDPM/DDIM diffusion model for butterfly image generation, trained on the Smithsonian Butterflies subset."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Mohamed Elsadek" }]
keywords = ["diffusion", "ddpm", "ddim", "generative", "pytorch", "butterflies"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.1",
    "torchvision>=0.16",
    "datasets>=2.14",
    "diffusers>=0.27",
    "accelerate>=0.27",
    "einops>=0.7",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "scikit-learn>=1.4",
    "imageio[ffmpeg]>=2.34",
    "torchmetrics>=1.3",
    "tqdm>=4.66",
    "Pillow>=10.0",
    "numpy>=1.26",
]

[project.optional-dependencies]
demo = ["streamlit>=1.32"]
dev = ["pytest>=8", "ruff>=0.4"]

[project.urls]
Homepage = "https://github.com/Mohameddfxxcxx/Butterfly-Diffusion-Generation"
Repository = "https://github.com/Mohameddfxxcxx/Butterfly-Diffusion-Generation"

[project.scripts]
butterfly-train = "src.train:main"

[tool.setuptools.packages.find]
include = ["src*"]
exclude = ["assets*", "checkpoints*", "notebooks*", "reports*", "outputs*", "app*"]
